@@ -1,3 +1,4 @@
+* Prefill export window with current view fields
 * Manage field context on Group value
 * Add export of selection string
 * Load plugins from local user directory
